--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "ant-design-vue": "^4.0.6",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
     "vue": "^3.2.13"
