--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "ant-design-vue": "^4.0.6",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
+    "mysql2": "^3.6.3",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
