--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "agora-rtm-sdk": "^1.5.1",
     "ant-design-vue": "^4.0.6",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
@@ -22,8 +23,9 @@
     "mysql2": "^3.6.3",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "vue": "^3.2.13"
-    
+    "uuid": "^9.0.1",
+    "vue": "^3.2.13",
+    "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
