--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "uuid": "^9.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
-    "vue3-smooth-scroll": "^0.8.1"
+    "vue3-smooth-scroll": "^0.8.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
