--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1",
+    "view-router": "^0.2.3",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vue3-smooth-scroll": "^0.8.1"
