--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "agora-rtm-sdk": "^1.5.1",
     "ant-design-vue": "^4.0.6",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
