--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vite"
   },
   "dependencies": {
     "@chat-ui/vue3": "^1.0.11",
@@ -21,23 +22,29 @@
     "core-js": "^3.8.3",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
+    "pinia": "^2.1.7",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "url": "^0.11.3",
     "uuid": "^9.0.1",
+    "vee-validate": "^4.11.8",
     "view-router": "^0.2.3",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
-    "vue3-smooth-scroll": "^0.8.1"
+    "vue3-smooth-scroll": "^0.8.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@types/uuid": "^9.0.7",
+    "@vitejs/plugin-vue": "^4.4.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vite": "^4.5.0"
   },
   "eslintConfig": {
     "root": true,
