--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "agora-rtc-sdk-ng": "^4.19.3",
     "agora-rtm-sdk": "^1.5.1",
     "ant-design-vue": "^4.0.6",
     "bootstrap": "^5.3.2",
