--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "agora-rtc-sdk-ng": "^4.19.3",
     "agora-rtm-sdk": "^1.5.1",
     "ant-design-vue": "^4.0.6",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
