--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
+    "firebase": "^10.7.2",
     "mysql2": "^3.6.3",
     "pinia": "^2.1.7",
     "socket.io": "^4.7.2",
