--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "ant-design-vue": "^4.0.6",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
     "pinia": "^2.1.7",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "twilio": "^4.21.0",
     "url": "^0.11.3",
     "uuid": "^9.0.1",
     "vee-validate": "^4.11.8",
